--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body>
-		<h1>Controle de versao</h1>
+		<h1>Controle de versao GIT</h1>
 		<h2>Trabalhando em equipe com controle e seguranca</h2>
 		
 		<ul>
