--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<body>
 		<h1>GIT controle de versao</h1>
-		<h2>Trabalhando em equipe com controle e seguranca</h2>
+		<h2>Trabalhando com controle e seguranca</h2>
 		
 		<ul>
 			<li>Fazer backup do seu projeto nao e o bastante para desfazer 
