--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<ul>Isso e um menu</ul>
 		</section>
 
-		<footer>Isto e um rodape</footer>
+		<footer>Copyright</footer>
 	</body>
 
 </html>
